--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="turn_off">Turn Off</string>
     <string name="discoverable">Discoverable</string>
     <string name="get_paired_devices">Get Paired Devices</string>
+    <string name="bluetooth_not_available">Bluetooth is not available</string>
+    <string name="bluetooth_available">Bluetooth is available</string>
 </resources>
