--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="connect_to_device">Connect to device</string>
     <string name="disconnect_bluetooth">Disconnect Bluetooth</string>
     <string name="change_uuid">Change UUID</string>
+    <string name="currently_not_connected">Currently not connected!</string>
+    <string name="connected">Connected!</string>
+    <string name="checking_paired_devices">Checking paired devices. . .</string>
+    <string name="checking_discoverable_devices">Checking discoverable devices. . .</string>
+    <string name="click_the_icon_to_scan">Click the icon to scan</string>
+    <string name="button_disabled_insufficient_permissions">Button disabled, insufficient permissions</string>
 </resources>
