Attendance list now properly gets the full list of attendance. Used handler instead to wait on "*". Added the handler to IOThread. Added checks for client disconnect. Cleaned up some logs and warnings. Added check for editText. Added more information by way of updating textView for user to read.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="button_disabled_insufficient_permissions">Button disabled, insufficient permissions</string>
     <string name="action_bluetooth">Bluetooth Settings</string>
     <string name="disconnect_device">Disconnect Device</string>
+    <string name="not_connected">Not connected!</string>
+    <string name="waiting_for_attendance">Waiting for Attendance!</string>
+    <string name="ready_to_swipe">Ready to swipe!</string>
 </resources>
